@@ -161,6 +161,7 @@ SETTINGS = {'running': True,
 	'draw visible chunks': False,
 	'draw life info': True,
 	'draw message box': True,
+	'print dijkstra maps': False,
 	'progress bar max value': 25,
 	'action queue size': 4,
 	'los': 40,
